--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,13 @@ abstract: 'Simple structured log messages'
 author:
   - 'AND COPYRIGHT'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   Test::More: 0.88
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.02'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +22,7 @@ no_index:
 requires:
   DateTime: 0
   JSON::Any: 0
-  Moose: 0
+  Moose: 2.0
   Moose::Autobox: 0
   MooseX::Role::Parameterized: 0
   MooseX::Role::WithOverloading: 0
@@ -35,4 +36,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/bobtfish/log-message-structured.git
-version: 0.004
+version: 0.005
