--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Simple structured log messages'
 author:
-  - 'AND COPYRIGHT'
+  - 'Tomas Doran (t0m) <bobtfish@bobtfish.net>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0.88
@@ -9,7 +9,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +21,7 @@ no_index:
     - t
 requires:
   DateTime: 0
-  JSON: 0
+  JSON::Any: 0
   Moose: 2.0
   Moose::Autobox: 0
   MooseX::Role::Parameterized: 0
@@ -37,3 +37,4 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/bobtfish/log-message-structured.git
 version: 0.006
+x_authority: BOBTFISH
