Import of DAMS/Log-Message-Structured-0.009 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.009
gitpan-cpan-path:         DAMS/Log-Message-Structured-0.009.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -29,11 +29,12 @@ requires:
   MooseX::Types: 0
   MooseX::Types::Common: 0
   MooseX::Types::ISO8601: 0.02
+  MooseX::Types::Structured: 0
   Sys::Hostname: 0
   namespace::autoclean: 0
   namespace::clean: 0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/bobtfish/log-message-structured.git
-version: 0.008
+version: 0.009
 x_authority: BOBTFISH
