Import of DAMS/Log-Message-Structured-0.011 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.011
gitpan-cpan-path:         DAMS/Log-Message-Structured-0.011.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -31,10 +31,11 @@ requires:
   MooseX::Types::ISO8601: 0.02
   MooseX::Types::Structured: 0
   Sys::Hostname: 0
+  YAML::Any: 0
   namespace::autoclean: 0
   namespace::clean: 0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/bobtfish/log-message-structured.git
-version: 0.010
+version: 0.011
 x_authority: BOBTFISH
