Import of DAMS/Log-Message-Structured-0.012 from CPAN.
gitpan-cpan-distribution: Log-Message-Structured
gitpan-cpan-version:      0.012
gitpan-cpan-path:         DAMS/Log-Message-Structured-0.012.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -37,5 +37,5 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/bobtfish/log-message-structured.git
-version: 0.011
-x_authority: BOBTFISH
+version: 0.012
+x_authority: cpan:BOBTFISH
